--- a/source/form.html
+++ b/source/form.html
@@ -15,28 +15,28 @@
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper wrapper">
-          <button class="wrapper__toggle" type="button">
+        <div class="main-nav__wrapper nav-wrapper">
+          <button class="nav-wrapper__toggle" type="button">
             <span class="visually-hidden">Закрыть.</span>
           </button>
           <ul class="main-nav__list menu">
             <li class="menu__item">
-              <a href="index.html">
+              <a class="menu__link" href="index.html">
                 Главная
               </a>
             </li>
             <li class="menu__item">
-              <a href="catalog.html">
+              <a class="menu__link" href="catalog.html">
                 Фото и видео
               </a>
             </li>
             <li class="menu__item">
-              <a>
+              <a class="menu__link">
                 Форма отзыва
               </a>
             </li>
             <li class="menu__item">
-              <a href="#">
+              <a class="menu__link" href="#">
                 HTML Academy
               </a>
             </li>
@@ -46,7 +46,7 @@
     </header>
 
     <main class="main-container">
-      <div class="hero-catalog">
+      <div class="hero">
         <h1 class="visually-hidden">Форма для вашего отзыва.</h1>
         <svg xmlns="http://www.w3.org/2000/svg" width="229" height="39" fill="none">
           <path fill="#fff"
