--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -98,6 +98,11 @@
           <li class="catalog__item card">
             <div class="card__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-2-desktop.webp 1x, img/photo-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-2-tablet.webp 1x, img/photo-2-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-2-mobile.webp 1x, img/photo-2-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-2-desktop.jpg 1x, img/photo-2-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-2-tablet.jpg 1x, img/photo-2-tablet@2x.jpg 2x">
                 <img class="card__img" src="img/photo-2-mobile.jpg" srcset="img/photo-2-mobile@2x.jpg 2x"
@@ -120,6 +125,11 @@
           <li class="catalog__item card">
             <div class="card__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-3-desktop.webp 1x, img/photo-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-3-tablet.webp 1x, img/photo-3-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-3-mobile.webp 1x, img/photo-3-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-3-desktop.jpg 1x, img/photo-3-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-3-tablet.jpg 1x, img/photo-3-tablet@2x.jpg 2x">
                 <img class="card__img" src="img/photo-3-mobile.jpg" srcset="img/photo-3-mobile@2x.jpg 2x"
@@ -142,6 +152,11 @@
           <li class="catalog__item card">
             <div class="card__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-4-desktop.webp 1x, img/photo-4-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-4-tablet.webp 1x, img/photo-4-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-4-mobile.webp 1x, img/photo-4-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/photo-4-desktop.jpg 1x, img/photo-4-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-4-tablet.jpg 1x, img/photo-4-tablet@2x.jpg 2x">
                 <img class="card__img" src="img/photo-4-mobile.jpg" srcset="img/photo-4-mobile@2x.jpg 2x"
@@ -171,6 +186,11 @@
           очередной раз!</p>
         <div class="presentation__img-wrapper">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)"
+              srcset="img/presentation-desktop.webp 1x, img/presentation-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/presentation-tablet.webp 1x, img/presentation-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/presentation-mobile.webp 1x, img/presentation-mobile@2x.webp 2x">
             <source media="(min-width: 1200px)"
               srcset="img/presentation-desktop.jpg 1x, img/presentation-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)"
