--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -83,6 +83,11 @@
                 </div>
                 <div class="advantages__img-wrapper">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)"
+                      srcset="img/town-desktop.webp 1x, img/town-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)"
+                      srcset="img/town-tablet.webp 1x, img/town-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/town-mobile.webp 1x, img/town-mobile@2x.webp 2x">
                     <source media="(min-width: 1200px)" srcset="img/town-desktop.jpg 1x, img/town-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/town-tablet.jpg 1x, img/town-tablet@2x.jpg 2x">
                     <img class="advantages__img" src="img/town-mobile.jpg" srcset="img/town-mobile@2x.jpg 2x"
@@ -135,6 +140,11 @@
                 </div>
                 <div class="advantages__img-wrapper">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)"
+                      srcset="img/bridge-desktop.webp 1x, img/bridge-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)"
+                      srcset="img/bridge-tablet.webp 1x, img/bridge-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/bridge-mobile.webp 1x, img/bridge-mobile@2x.webp 2x">
                     <source media="(min-width: 1200px)"
                       srcset="img/bridge-desktop.jpg 1x, img/bridge-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="img/bridge-tablet.jpg 1x, img/bridge-tablet@2x.jpg 2x">
