Пиксель перфект для индекса и каталога

--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
       <a class="header__logo logo" href="index.html" aria-label="Ссылка на главную страницу">
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
-      <nav class="nav nav--closed nav--nojs">
+      <nav class="nav nav--opened nav--nojs">
         <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть и закрыть меню</span></button>
         <div class="nav__wrapper">
           <ul class="nav__list">
@@ -54,7 +54,7 @@
 
     <main class="main-container">
 
-      <div class="hero">
+      <div class="hero hero--index">
         <h1 class="visually-hidden">Добро пожаловать в прекрасную Седону.</h1>
         <div class="hero__img">
           <img class="hero__logo" src="img/welcome.svg" alt="Природные достопримечательности Седоны." width="282"
@@ -76,13 +76,13 @@
 
             <li class="advantages__item advantages__item--accent">
               <div class="advantages__content">
-                <div class="advantages__text">
+                <div class="advantages__text advantages__text--accent">
                   <h3 class="advantages__title">
                     Настоящий городок
                   </h3>
                   <p class="advantages__description">
-                    <span class="display-block">— №1 —</span>
-                    <span>Седона не атракцион для туристов,там течет своя жизнь</span>
+                    <span class="display-block advantages__number">— №1 —</span>
+                    <span>Седона не аттракцион для туристов, там течет своя жизнь</span>
                   </p>
                 </div>
                 <div class="advantages__img-wrapper">
@@ -101,7 +101,7 @@
               </div>
 
 
-              <ul class="advantages__list list-icon">
+              <ul class="list-icon">
                 <li class="list-icon__item list-icon__item--hotels">
                   <h3 class="advantages__title">
                     Жилье
@@ -133,12 +133,12 @@
 
             <li class="advantages__item advantages__item--accent">
               <div class="advantages__content">
-                <div class="advantages__text">
+                <div class="advantages__text advantages__text--order">
                   <h3 class="advantages__title">
                     Там есть мост дьявола
                   </h3>
                   <p class="advantages__description">
-                    <span class="display-block">— №2 —</span>
+                    <span class="display-block advantages__number">— №2 —</span>
                     <span>Да, по нему можно пройти! Если вы осмелитесь, конечно</span>
                   </p>
                 </div>
@@ -158,13 +158,13 @@
                 </div>
               </div>
 
-              <ul class="advantages__list list-secondary">
+              <ul class="list-secondary">
                 <li class="advantages__item advantages__item--secondary">
                   <h3 class="advantages__title advantages__title--secondary">
                     Небольшая площадь
                   </h3>
                   <p class="advantages__description advantages__description--secondary">
-                    <span class="display-block">— №3 —</span>
+                    <span class="display-block advantages__number advantages__number--secondary">— №3 —</span>
                     <span>Все интересные места находятся очень близко</span>
                   </p>
                 </li>
@@ -174,7 +174,7 @@
                     Красивая дорога
                   </h3>
                   <p class="advantages__description advantages__description--secondary">
-                    <span class="display-block">— №4 —</span>
+                    <span class="display-block advantages__number advantages__number--secondary">— №4 —</span>
                     <span>Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
                   </p>
                 </li>
@@ -184,7 +184,7 @@
                     Мало туристов
                   </h3>
                   <p class="advantages__description advantages__description--secondary">
-                    <span class="display-block">— №5 —</span>
+                    <span class="display-block advantages__number advantages__number--secondary">— №5 —</span>
                     <span>Большинство едет в гранд каньон и толпится там</span>
                   </p>
                 </li>
