--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,7 +23,7 @@
       <a class="header__logo logo" href="index.html" aria-label="Ссылка на главную страницу">
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
-      <nav class="nav nav--closed nav--nojs">
+      <nav class="nav nav--opened nav--nojs">
         <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть и закрыть меню</span></button>
         <div class="nav__wrapper">
           <ul class="nav__list">
@@ -53,11 +53,11 @@
     </header>
 
     <main class="main-container">
-      <div class="hero">
+      <div class="hero hero--alt">
         <h1 class="visually-hidden">Галерея фотграфий и видео Седоны.</h1>
         <div class="hero__img">
-          <img class="hero__logo--short" src="img/hero-catalog.svg" alt="Природные достопримечательности Седоны."
-            width="229" height="39">
+          <img class="hero__logo hero__logo--short" src="img/hero-catalog.svg"
+            alt="Природные достопримечательности Седоны." width="229" height="39">
         </div>
       </div>
 
@@ -235,7 +235,7 @@
           </ul>
         </div>
 
-        <div class="footer__copyright-wrapper">
+        <div class="footer__copyright-wrapper footer__copyright-wrapper--catalog">
           <a class="footer__copyright" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Сайт разработчика.
             </span>
