--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
       <a class="header__logo logo" href="index.html" aria-label="Ссылка на главную страницу">
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
-      <nav class="nav nav--closed nav--nojs">
+      <nav class="nav nav--opened nav--nojs">
         <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть и закрыть меню</span></button>
         <div class="nav__wrapper">
           <ul class="nav__list">
@@ -54,7 +54,7 @@
 
     <main class="main-container">
 
-      <div class="hero">
+      <div class="hero hero--alt">
         <h1 class="visually-hidden">Форма для вашего отзыва.</h1>
         <div class="hero__img">
           <img class="hero__logo--short" src="img/hero-catalog.svg" alt="Природные достопримечательности Седоны."
