Пиксель перфект страницы формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -33,7 +33,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a class="nav__link">
+              <a class="nav__link nav__link--current">
                 Фото и видео
               </a>
             </li>
@@ -235,7 +235,7 @@
           </ul>
         </div>
 
-        <div class="footer__copyright-wrapper footer__copyright-wrapper--catalog">
+        <div class="footer__copyright-wrapper footer__copyright-wrapper--alt">
           <a class="footer__copyright" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Сайт разработчика.
             </span>
