--- a/source/form.html
+++ b/source/form.html
@@ -38,7 +38,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a class="nav__link">
+              <a class="nav__link nav__link--current">
                 Форма отзыва
               </a>
             </li>
@@ -63,7 +63,7 @@
       </div>
 
       <section class="feedback">
-        <div class="feadback__heading heading">
+        <div class="feedback__heading heading">
           <h2 class="heading__title">Оставьте свой отзыв</h2>
           <p class="heading__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных
             вами достопримечательностях</p>
@@ -120,7 +120,7 @@
               <fieldset class="form__block form-block">
                 <legend class="form__heading">Ваше общее впечатление:</legend>
 
-                <ul class="form-block__grade-list">
+                <ul class="form-block__grade-list form-block__grade-list--radio">
                   <li class="form-block__grade-item radio">
                     <input class="radio__input" type="radio" id="positive" name="opinion" value="positive" checked>
                     <label class="radio__label" for="positive">Скорее положительное</label>
@@ -141,7 +141,7 @@
               <fieldset class="form__block form-block">
                 <legend class="form__heading">Посещенные достопримечательности:</legend>
 
-                <ul class="form-block__grade-list">
+                <ul class="form-block__grade-list form-block__grade-list--checkbox">
                   <li class="form-block__grade-item checkbox">
                     <input class="checkbox__input" type="checkbox" id="bridge" name="bridge" checked>
                     <label class="checkbox__label" for="bridge">Мост Дьявола</label>
@@ -164,12 +164,12 @@
 
 
             <div class="grade-wrapper">
-              <fieldset class="form__block form-block">
+              <fieldset class="form__block form-block opinion">
                 <legend class="form__heading">Опишите свои эмоции:</legend>
 
                 <div class="input-text">
                   <label class="visually-hidden" for="review">Поделитесь с нами своими эмоциями.</label>
-                  <input class="input-text__field opinion" type="text" id="review" name="review"
+                  <input class="input-text__field opinion__field" type="text" id="review" name="review"
                     placeholder="Опишите подробно все свои восторги">
                 </div>
               </fieldset>
@@ -216,7 +216,7 @@
           </ul>
         </div>
 
-        <div class="footer__copyright-wrapper">
+        <div class="footer__copyright-wrapper footer__copyright-wrapper--alt">
           <a class="footer__copyright" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Сайт разработчика.
             </span>
