--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
         <div class="nav__wrapper">
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__link">
+              <a class="nav__link nav__link--current">
                 Главная
               </a>
             </li>
@@ -203,11 +203,13 @@
       </section>
 
       <section class="map">
-        <h2 class="visually-hidden">Карта Седоны.</h2>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13567333259!2d-111.83024378062403!3d34.85444379079877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2scz!4v1671624084177!5m2!1sru!2scz"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="map__wrapper">
+          <h2 class="visually-hidden">Карта Седоны.</h2>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.13567333259!2d-111.83024378062403!3d34.85444379079877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2scz!4v1671624084177!5m2!1sru!2scz"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </section>
     </main>
 
