Пиксель перфект всех страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,7 +19,7 @@
 <body>
   <div class="body-container">
 
-    <header class="header">
+    <header class="header header--nojs">
       <a class="header__logo logo" href="index.html" aria-label="Ссылка на главную страницу">
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
@@ -74,7 +74,7 @@
         <ul class="catalog__list">
 
           <li class="catalog__item card card--accent">
-            <div class="card__img-wrapper">
+            <a href="#" class="card__img-wrapper" aria-label="Ссылка на полноразмерную картинку">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/photo-1-desktop.webp 1x, img/photo-1-desktop@2x.webp 2x">
@@ -86,7 +86,7 @@
                 <img class="card__img" src="img/photo-1-mobile.jpg" srcset="img/photo-1-mobile@2x.jpg 2x"
                   alt="Фотография горизонта на закате." width="280" height="280">
               </picture>
-            </div>
+            </a>
             <div class="card__text-wrapper">
               <div class="card__text">
                 <h3 class="card__title">Неродные просторы</h3>
@@ -100,7 +100,7 @@
           </li>
 
           <li class="catalog__item card">
-            <div class="card__img-wrapper">
+            <a href="#" class="card__img-wrapper" aria-label="Ссылка на полноразмерную картинку">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/photo-2-desktop.webp 1x, img/photo-2-desktop@2x.webp 2x">
@@ -112,7 +112,7 @@
                 <img class="card__img" src="img/photo-2-mobile.jpg" srcset="img/photo-2-mobile@2x.jpg 2x"
                   alt="Фотография местной природы Седоны." width="280" height="280">
               </picture>
-            </div>
+            </a>
             <div class=" card__text-wrapper">
               <div class="card__text">
                 <h3 class="card__title">Местная растительность</h3>
@@ -127,7 +127,7 @@
           </li>
 
           <li class="catalog__item card">
-            <div class="card__img-wrapper">
+            <a href="#" class="card__img-wrapper" aria-label="Ссылка на полноразмерную картинку">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/photo-3-desktop.webp 1x, img/photo-3-desktop@2x.webp 2x">
@@ -139,7 +139,7 @@
                 <img class="card__img" src="img/photo-3-mobile.jpg" srcset="img/photo-3-mobile@2x.jpg 2x"
                   alt="Фотография дороги в сосновом лесу." width="280" height="280">
               </picture>
-            </div>
+            </a>
             <div class=" card__text-wrapper">
               <div class="card__text">
                 <h3 class="card__title">Дорога на север</h3>
@@ -154,7 +154,7 @@
           </li>
 
           <li class="catalog__item card">
-            <div class="card__img-wrapper">
+            <a href="#" class="card__img-wrapper" aria-label="Ссылка на полноразмерную картинку">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)"
                   srcset="img/photo-4-desktop.webp 1x, img/photo-4-desktop@2x.webp 2x">
@@ -166,7 +166,7 @@
                 <img class="card__img" src="img/photo-4-mobile.jpg" srcset="img/photo-4-mobile@2x.jpg 2x"
                   alt="Фотография моста дьявола." width="280" height="280">
               </picture>
-            </div>
+            </a>
             <div class=" card__text-wrapper">
               <div class="card__text">
                 <h3 class="card__title">Мост дьявола</h3>
