--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="body-container">
 
-    <header class="header">
+    <header class="header header--nojs">
       <a class="header__logo logo" href="index.html" aria-label="Ссылка на главную страницу">
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
@@ -116,7 +116,7 @@
                     Еда
                   </h3>
                   <p class="advantages__description">
-                    Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+                    Всегда&nbspзаказывайте фирменный бургер, вы&nbspне&nbspразочаруетесь!
                   </p>
                 </li>
 
@@ -125,7 +125,7 @@
                     Сувениры
                   </h3>
                   <p class="advantages__description">
-                    Не только китайского, но и местного производства!
+                    Не&nbspтолько&nbspкитайского, <br>но&nbspи местного производства!<br>
                   </p>
                 </li>
               </ul>
@@ -175,7 +175,7 @@
                   </h3>
                   <p class="advantages__description advantages__description--secondary">
                     <span class="display-block advantages__number advantages__number--secondary">— №4 —</span>
-                    <span>Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
+                    <span>Ехать в Седону из Лас-Вегаса совсем не&nbspскучно!</span>
                   </p>
                 </li>
 
@@ -196,13 +196,13 @@
 
       <section class="interested">
         <h2 class="interested__title">Заинтересовались?</h2>
-        <p class="interested__description">Укажите предполагаемые даты поездки, и мы покажем
-          вам лучшие предложения
+        <p class="interested__description">Укажите предполагаемые даты поездки, и&nbspмы&nbspпокажем&nbspвам&nbspлучшие
+          предложения
           гостиниц в Седоне</p>
         <a class="interested__button button" href="#" aria-label="Нажмите чтобы найти гостиницу">Найти гостиницу</a>
       </section>
 
-      <section class="map">
+      <section class="map map--nojs">
         <div class="map__wrapper">
           <h2 class="visually-hidden">Карта Седоны.</h2>
           <iframe
