--- a/source/catalog.html
+++ b/source/catalog.html
@@ -188,21 +188,24 @@
         <h2 class="presentation__title">Все еще сомневаетесь?</h2>
         <p class="presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в
           очередной раз!</p>
-        <div class="presentation__img-wrapper">
-          <picture>
-            <source type="image/webp" media="(min-width: 1200px)"
-              srcset="img/presentation-desktop.webp 1x, img/presentation-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)"
-              srcset="img/presentation-tablet.webp 1x, img/presentation-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="img/presentation-mobile.webp 1x, img/presentation-mobile@2x.webp 2x">
-            <source media="(min-width: 1200px)"
-              srcset="img/presentation-desktop.jpg 1x, img/presentation-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)"
-              srcset="img/presentation-tablet.jpg 1x, img/presentation-tablet@2x.jpg 2x">
-            <img class="presentation__img" src="img/presentation-mobile.jpg" srcset="img/presentation-mobile@2x.jpg 2x"
-              alt="Превью видеопрезентации о городке Седона." width="280" height="177">
-          </picture>
-        </div>
+        <a href="#" aria-label="Ссылка на видеопрезентацию о городе Седона">
+          <div class="presentation__img-wrapper">
+            <picture>
+              <source type="image/webp" media="(min-width: 1200px)"
+                srcset="img/presentation-desktop.webp 1x, img/presentation-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/presentation-tablet.webp 1x, img/presentation-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/presentation-mobile.webp 1x, img/presentation-mobile@2x.webp 2x">
+              <source media="(min-width: 1200px)"
+                srcset="img/presentation-desktop.jpg 1x, img/presentation-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)"
+                srcset="img/presentation-tablet.jpg 1x, img/presentation-tablet@2x.jpg 2x">
+              <img class="presentation__img" src="img/presentation-mobile.jpg"
+                srcset="img/presentation-mobile@2x.jpg 2x" alt="Превью видеопрезентации о городке Седона." width="280"
+                height="177">
+            </picture>
+          </div>
+        </a>
       </section>
 
     </main>
