--- a/source/form.html
+++ b/source/form.html
@@ -224,6 +224,32 @@
       </div>
     </footer>
 
+
+    <div class="modal modal__error modal__error--close">
+      <div class="modal__auth">
+        <section class="modal__content">
+          <h2 class="modal__title">Что-то пошло не так!</h2>
+          <div class="modal__content-wrapper">
+            <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+            <button class="button modal__button" type="button">Ок</button>
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <div class="modal modal__success modal__success--close">
+      <div class="modal__auth">
+        <section class="modal__content">
+          <h2 class="modal__title">Ваш отзыв отправлен!</h2>
+          <div class="modal__content-wrapper">
+            <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
+              опубликуем его на сайте.</p>
+            <button class="button modal__button" type="button">Закрыть окно</button>
+          </div>
+        </section>
+      </div>
+    </div>
+
   </div>
 
   <script src="js/script.js"></script>
