--- a/source/index.html
+++ b/source/index.html
@@ -116,7 +116,7 @@
                     Еда
                   </h3>
                   <p class="advantages__description">
-                    Всегда&nbspзаказывайте фирменный бургер, вы&nbspне&nbspразочаруетесь!
+                    Всегда&nbsp;заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!
                   </p>
                 </li>
 
@@ -125,7 +125,7 @@
                     Сувениры
                   </h3>
                   <p class="advantages__description">
-                    Не&nbspтолько&nbspкитайского, <br>но&nbspи местного производства!<br>
+                    Не&nbsp;только&nbsp;китайского, <br>но&nbsp;и местного производства!<br>
                   </p>
                 </li>
               </ul>
@@ -175,7 +175,7 @@
                   </h3>
                   <p class="advantages__description advantages__description--secondary">
                     <span class="display-block advantages__number advantages__number--secondary">— №4 —</span>
-                    <span>Ехать в Седону из Лас-Вегаса совсем не&nbspскучно!</span>
+                    <span>Ехать в Седону из Лас-Вегаса совсем не&nbsp;скучно!</span>
                   </p>
                 </li>
 
@@ -196,7 +196,8 @@
 
       <section class="interested">
         <h2 class="interested__title">Заинтересовались?</h2>
-        <p class="interested__description">Укажите предполагаемые даты поездки, и&nbspмы&nbspпокажем&nbspвам&nbspлучшие
+        <p class="interested__description">Укажите предполагаемые даты поездки,
+          и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие
           предложения
           гостиниц в Седоне</p>
         <a class="interested__button button" href="#" aria-label="Нажмите чтобы найти гостиницу">Найти гостиницу</a>
