--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
               <legend class="form__heading">Представьтесь:</legend>
 
               <ul class="form-block__name-list form-block__name-list--first">
-                <li class="form-block__name-item input-text"><label class="form-block__title"
+                <li class="form-block__name-item input-text"><label class="form-block__title form-block__title--name"
                     for="first-name">Имя*:</label>
                   <input class="input-text__field" type="text" id="first-name" name="first-name"
                     placeholder="Укажите имя" value="Пётр" required>
@@ -106,7 +106,8 @@
                     placeholder="Введите телефон" required>
                 </li>
 
-                <li class="form-block__name-item input-text"><label class="form-block__title" for="email">Электронная
+                <li class="form-block__name-item input-text"><label class="form-block__title form-block__title--email"
+                    for="email">Электронная
                     почта*:</label>
                   <input class="input-text__field input-text__field--icon-email" type="text" id="email" name="email"
                     placeholder="Введите e-mail" required>
@@ -228,31 +229,34 @@
     <div class="modal modal__error modal__error--close">
       <div class="modal__auth">
         <section class="modal__content">
-          <h2 class="modal__title">Что-то пошло не так!</h2>
-          <div class="modal__content-wrapper">
+          <div class="modal__text-wrapper">
+            <h2 class="modal__title">Что-то пошло не так!</h2>
             <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+          </div>
+          <div class="modal__button-wrapper">
             <button class="button modal__button" type="button">Ок</button>
           </div>
         </section>
       </div>
     </div>
-
-    <div class="modal modal__success modal__success--close">
-      <div class="modal__auth">
-        <section class="modal__content">
-          <h2 class="modal__title">Ваш отзыв отправлен!</h2>
-          <div class="modal__content-wrapper">
-            <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы
-              опубликуем его на сайте.</p>
-            <button class="button modal__button" type="button">Закрыть окно</button>
-          </div>
-        </section>
-      </div>
-    </div>
-
   </div>
 
-  <script src="js/script.js"></script>
+  <div class="modal modal__success modal__success--close">
+    <div class="modal__auth">
+      <section class="modal__content">
+        <div class="modal__text-wrapper">
+          <h2 class="modal__title">Ваш отзыв отправлен!</h2>
+          <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В&nbsp;ближайшее время мы
+            опубликуем его на сайте.</p>
+        </div>
+        <div class="modal__button-wrapper">
+          <button class="button modal__button" type="button">Закрыть окно</button>
+        </div>
+      </section>
+    </div>
+  </div>
+
+  <script src="js/nav-script.js"></script>
 </body>
 
 </html>
