--- a/source/index.html
+++ b/source/index.html
@@ -256,7 +256,8 @@
 
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="js/nav-script.js"></script>
+  <script src="js/map-script.js"></script>
 </body>
 
 </html>
