--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,8 @@
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="nav nav--opened nav--nojs">
-        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть и закрыть меню</span></button>
+        <button class="nav__toggle" type="button" aria-label="Нажмите чтобы открыть или закрыть меню"><span
+            class="visually-hidden">Открыть и закрыть меню</span></button>
         <div class="nav__wrapper">
           <ul class="nav__list">
             <li class="nav__item">
