--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,7 +24,8 @@
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="nav nav--opened nav--nojs">
-        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть и закрыть меню</span></button>
+        <button class="nav__toggle" type="button" aria-label="Нажмите чтобы открыть или закрыть меню"><span
+            class="visually-hidden">Открыть и закрыть меню</span></button>
         <div class="nav__wrapper">
           <ul class="nav__list">
             <li class="nav__item">
@@ -93,7 +94,8 @@
                 <p class="card__description">Автор фото: Борис</p>
               </div>
               <div class="card__favorite">
-                <button class="card__button" type="button"><span class="visually-hidden">Поставить лайк</span></button>
+                <button class="card__button" type="button" aria-label="Нажмите чтобы поставить лайк"><span
+                    class="visually-hidden">Поставить лайк</span></button>
                 <span class="card__number">1350</span>
               </div>
             </div>
@@ -119,7 +121,8 @@
                 <p class="card__description">Автор фото: Сергей</p>
               </div>
               <div class="card__favorite">
-                <button class="card__button" type="button"><span class="visually-hidden">Поставить
+                <button class="card__button" type="button" aria-label="Нажмите чтобы поставить лайк"><span
+                    class="visually-hidden">Поставить
                     лайк</span></button>
                 <span class="card__number">143</span>
               </div>
@@ -146,7 +149,8 @@
                 <p class="card__description">Автор фото: Петр</p>
               </div>
               <div class="card__favorite">
-                <button class="card__button" type="button"><span class="visually-hidden">Поставить
+                <button class="card__button" type="button" aria-label="Нажмите чтобы поставить лайк"><span
+                    class="visually-hidden">Поставить
                     лайк</span></button>
                 <span class="card__number">96</span>
               </div>
@@ -173,7 +177,8 @@
                 <p class="card__description">Автор фото: Антон</p>
               </div>
               <div class="card__favorite">
-                <button class="card__button" type="button"><span class="visually-hidden">Поставить
+                <button class="card__button" type="button" aria-label="Нажмите чтобы поставить лайк"><span
+                    class="visually-hidden">Поставить
                     лайк</span></button>
                 <span class="card__number">254</span>
               </div>
