--- a/source/form.html
+++ b/source/form.html
@@ -24,7 +24,8 @@
         <img class="logo__image" src="img/logo.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="nav nav--opened nav--nojs">
-        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть и закрыть меню</span></button>
+        <button class="nav__toggle" type="button" aria-label="Нажмите чтобы открыть или закрыть меню"><span
+            class="visually-hidden">Открыть и закрыть меню</span></button>
         <div class="nav__wrapper">
           <ul class="nav__list">
             <li class="nav__item">
@@ -57,8 +58,8 @@
       <div class="hero hero--alt">
         <h1 class="visually-hidden">Форма для вашего отзыва.</h1>
         <div class="hero__img">
-          <img class="hero__logo--short" src="img/hero-catalog.svg" alt="Природные достопримечательности Седоны."
-            width="229" height="39">
+          <img class="hero__logo hero__logo--short" src="img/hero-catalog.svg"
+            alt="Природные достопримечательности Седоны." width="229" height="39">
         </div>
       </div>
 
@@ -102,14 +103,14 @@
               <ul class="form-block__name-list form-block__name-list--second">
                 <li class="form-block__name-item input-text"><label class="form-block__title" for="mobile">Контактный
                     телефон*:</label>
-                  <input class="input-text__field input-text__field--icon-phone" type="text" id="mobile" name="mobile"
+                  <input class="input-text__field input-text__field--icon-phone" type="tel" id="mobile" name="mobile"
                     placeholder="Введите телефон" required>
                 </li>
 
                 <li class="form-block__name-item input-text"><label class="form-block__title form-block__title--email"
                     for="email">Электронная
                     почта*:</label>
-                  <input class="input-text__field input-text__field--icon-email" type="text" id="email" name="email"
+                  <input class="input-text__field input-text__field--icon-email" type="email" id="email" name="email"
                     placeholder="Введите e-mail" required>
                 </li>
               </ul>
@@ -165,10 +166,10 @@
 
 
             <div class="grade-wrapper">
-              <div class="input-text">
+              <div class="input-text input-text--opinion">
                 <label class="form__heading form__heading--opinion" for="review">Опишите свои эмоции:</label>
-                <textarea class="input-text__field opinion__field" placeholder="Опишите подробно все свои восторги"
-                  id="review" name="review"></textarea>
+                <textarea class="input-text__field input-text__field--opinion"
+                  placeholder="Опишите подробно все свои восторги" id="review" name="review"></textarea>
               </div>
             </div>
 
@@ -226,7 +227,7 @@
     </footer>
 
 
-    <div class="modal modal__error modal__error--close">
+    <div class="modal modal--error modal--error-close">
       <div class="modal__auth">
         <section class="modal__content">
           <div class="modal__text-wrapper">
@@ -234,14 +235,15 @@
             <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
           </div>
           <div class="modal__button-wrapper">
-            <button class="button modal__button" type="button">Ок</button>
+            <button class="button modal__button" type="button"
+              aria-label="Нажмите чтобы закрыть модальное окно">Ок</button>
           </div>
         </section>
       </div>
     </div>
   </div>
 
-  <div class="modal modal__success modal__success--close">
+  <div class="modal modal--success modal--success-close">
     <div class="modal__auth">
       <section class="modal__content">
         <div class="modal__text-wrapper">
@@ -250,7 +252,8 @@
             опубликуем его на сайте.</p>
         </div>
         <div class="modal__button-wrapper">
-          <button class="button modal__button" type="button">Закрыть окно</button>
+          <button class="button modal__button" type="button" aria-label="Нажмите чтобы закрыть модальное окно">Закрыть
+            окно</button>
         </div>
       </section>
     </div>
